<resources>
    <string name="app_name">CafeTask</string>
    <string name="quantity">الكمية</string>
    <string name="total">الإجمالي</string>
    <string name="tax">قيمة الضريبة</string>
    <string name="final_sum">المجموع النهائي</string>
    <string name="continue_text">متابعة</string>
    <string name="connection_lost">تأكد من إتصالك بالأنترنت</string>
    <string name="currency">&#160; ريال &#160;</string>
    <string name="submitted">تم إرسال طلبك بنجاح</string>
    <string name="try_again">حدث خطأ، حاول مرة أخري</string>
</resources>
