<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ProgressBar
        android:id="@+id/productProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"/>
    <ScrollView
        android:id="@+id/productMainLayout"
        android:layout_width="match_parent"
        android:visibility="invisible"
        android:background="@color/colorWhite"
        android:layout_height="370dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/product_layout_margin"
            android:paddingRight="@dimen/product_layout_margin"
            tools:context=".presentation.view.activity.ProductActivity">

            <ImageView
                android:id="@+id/productImageView"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:src="@drawable/ic_launcher_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RelativeLayout
                android:id="@+id/quantityLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/product_layout_margin"
                android:gravity="center_vertical"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ProductDescTextView">

                <ImageView
                    android:id="@+id/quantityRemoveImageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginRight="@dimen/product_layout_margin"
                    android:background="@drawable/rounded_left_btn_bg"
                    android:src="@drawable/ic_remove_black" />

                <ImageView
                    android:id="@+id/quantityAddImageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/ProductQuantityTextView"
                    android:background="@drawable/rounded_right_btn_bg"
                    android:src="@drawable/ic_add_black" />

                <TextView
                    android:id="@+id/ProductQuantityTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/product_layout_margin"
                    android:layout_toRightOf="@id/quantityRemoveImageView"
                    android:text="1"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/text_bigger_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/quantityPromptTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="end|center_vertical"
                    android:text="@string/quantity"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/text_title_size" />
            </RelativeLayout>

            <TextView
                android:id="@+id/productTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/product_layout_margin"
                android:text="اسبرسو ماكينو  ـ حجم صغير"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/text_title_size"
                android:textStyle="bold"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/productImageDivider" />
            <TextView
                android:id="@+id/ProductPriceTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/product_layout_margin"
                android:text="12 ريال"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/text_title_size"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/productImageDivider" />

            <TextView
                android:id="@+id/ProductDescTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/product_layout_margin"
                android:text="قهوة قهوة قهوة"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/text_content_size"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/productTitleTextView" />



            <View
                android:id="@+id/productImageDivider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorGray"
                app:layout_constraintTop_toBottomOf="@id/productImageView" />

            <View
                android:id="@+id/productInfoDivider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/product_layout_margin"
                android:background="@color/colorGray"
                app:layout_constraintTop_toBottomOf="@id/quantityLayout" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/additionsRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/productInfoDivider">
            </androidx.recyclerview.widget.RecyclerView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:background="@color/colorLightGray"
        android:padding="@dimen/product_layout_margin"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/totalPromptTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total"
            android:textColor="@color/colorGrayDark"
            android:textSize="@dimen/text_title_size"
            android:textStyle="bold"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/totalPriceTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="250 ريال"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/text_title_size"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/taxPromptTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tax"
            android:textColor="@color/colorGrayDark"
            android:textSize="@dimen/text_title_size"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/checkout_layout_margin"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/totalPromptTextView" />
        <TextView
            android:id="@+id/taxTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="% 10"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/text_title_size"
            android:textStyle="bold"
            app:layout_constraintRight_toRightOf="@id/totalPriceTextView"
            android:layout_marginTop="@dimen/checkout_layout_margin"
            app:layout_constraintTop_toBottomOf="@id/totalPromptTextView"  />

        <TextView
            android:id="@+id/sumPromptTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/final_sum"
            android:textColor="@color/colorGrayDark"
            android:textSize="@dimen/text_title_size"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/checkout_layout_margin"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/taxPromptTextView" />
        <TextView
            android:id="@+id/sumTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="275 ريال"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/text_title_size"
            android:textStyle="bold"
            app:layout_constraintRight_toRightOf="@id/totalPriceTextView"
            android:layout_marginTop="@dimen/checkout_layout_margin"
            app:layout_constraintTop_toBottomOf="@id/taxPromptTextView"  />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/rounded_brown_btn_bg"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_title_size"
            android:text="@string/continue_text">

        </Button>

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>